--- a/WordOnline/appsettings.json
+++ b/WordOnline/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost; database=; user id=sa;password=1q2w3e4r%; trusted_Connection=False; trustServerCertificate=True;"
+    "DefaultConnection": "server=localhost; database=word-online; user id=sa;password=1q2w3e4r%; trusted_Connection=False; trustServerCertificate=True;"
   },
   "AllowedHosts": "*"
 }
